<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
                name="viewModel"
                type="com.pemwa.topnews.view.detail.NewsDetailViewModel"/>

    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.pemwa.topnews.view.detail.NewsDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tvDetailContent"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.selectedArticle.content}"
                    app:layout_constraintTop_toBottomOf="@+id/contentGroup"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Police in Hong Kong have seized what is thought to be the largest ever cachet of high-powered explosives uncovered in the city, in a raid Friday night on a suspected bomb-making factory."
                    android:textSize="18sp" app:layout_constraintVertical_bias="0.100000024"/>
            <ImageView
                    android:id="@+id/ivDetailArticleImage"
                    android:layout_width="0dp"
                    android:layout_height="266dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:imageUrl="@{viewModel.selectedArticle.urlToImage}"
                    tools:src="@tools:sample/backgrounds/scenic"
                    android:contentDescription="@string/detail_image"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@{viewModel.selectedArticle.title}"
                    app:layout_constraintTop_toBottomOf="@+id/ivDetailArticleImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/tvDetailTitle"
                    tools:text="Hong Kong police make 'largest ever' seizure of explosives on eve of protests - CNN"
                    android:textAlignment="viewStart" android:textStyle="bold" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <LinearLayout
                    android:id="@+id/contentGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
                    app:layout_constraintHorizontal_bias="0.031" android:layout_marginTop="8dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tvDetailAuthor"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.selectedArticle.author}"
                        tools:text="Author"
                        android:textColor="@color/primaryLightColor" android:textSize="16sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvDetailPublishedAt"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/primaryLightColor"
                        app:datePublished="@{viewModel.selectedArticle.publishedAt}"
                        tools:text="7 August 2020" android:textSize="16sp"/>

            </LinearLayout>

            <Button
                    android:text="@string/read_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btReadMore"
                    android:onClick="@{() -> viewModel.onOpenWebPage()}"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    app:icon="@android:drawable/ic_menu_set_as"
                    tools:text="@string/read_more" android:contentDescription="@string/read_more_button"
                    app:cornerRadius="@dimen/spacing_normal" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailContent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.917" android:layout_marginBottom="8dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>