<resources>
    <string name="app_name">Top News</string>
    <string name="article_image">Image of an article.</string>
    <string name="tab_everything">Everything</string>
    <string name="tab_top_headlines">Top Headlines</string>
    <string name="detail_image">News Detail Image</string>
    <string name="read_more">Read More</string>
    <string name="read_more_button">Read more button</string>
    <string name="copy_link">Copy link</string>
    <string name="share">Share</string>
    <string name="check_network_connectivity">No internet connection. Ckeck your network connectivity!</string>
    <string name="web_page_error">No application can handle this request. Please install a web browser or check your
        URL.
    </string>
    <string name="share_intent_error">No application can handle this request!!</string>
    <string name="no_data_available_yet">No Data available yet!!</string>
</resources>
